[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-trading"
version = "0.1.0"
description = "AI-Trading: Reinforcement Learning framework for trading (OpenAI Gym based)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "torch>=1.12",
    "stable-baselines3>=2.0.0",
    "gymnasium>=0.29",
]

[project.optional-dependencies]
dev = ["pytest","ruff","black","pre-commit","mkdocs","sphinx","ray[tune]","wandb"]
